k8s/app/squirrel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squirrel-core
  namespace: game
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: squirrel-core
  template:
    metadata:
      labels:
        app: squirrel-core
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: squirrel-core
          image: registry.lakeofcolors.com/squirrel/squirrel-core:latest
          ports:
            - containerPort: 9221

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
